include(CheckCXXCompilerFlag)

set(SOURCES test.cpp)

if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    set(OPTIONS /W4 /WX)
    check_cxx_compiler_flag(/permissive HAS_PERMISSIVE_FLAG)
    if(HAS_PERMISSIVE_FLAG)
        set(OPTIONS ${OPTIONS} /permissive-)
    endif()
    set(OPTIONS ${OPTIONS} /wd4702) # Disable warning C4702: unreachable code

    set(HAS_CPP11_FLAG TRUE)
    check_cxx_compiler_flag(/std:c++14 HAS_CPP14_FLAG)
    check_cxx_compiler_flag(/std:c++17 HAS_CPP17_FLAG)
    check_cxx_compiler_flag(/std:c++20 HAS_CPP20_FLAG)
    check_cxx_compiler_flag(/std:c++latest HAS_CPPLATEST_FLAG)
elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    set(CMAKE_VERBOSE_MAKEFILE ON)
    set(OPTIONS -Wall -Wextra -pedantic-errors -Werror)

    check_cxx_compiler_flag(-std=c++14 HAS_CPP14_FLAG)
    check_cxx_compiler_flag(-std=c++17 HAS_CPP17_FLAG)
    check_cxx_compiler_flag(-std=c++20 HAS_CPP20_FLAG)
endif()

function(configure_test target std)
    target_compile_options(${target} PRIVATE ${OPTIONS})
    target_compile_definitions(${target} PRIVATE DOCTEST_CONFIG_USE_STD_HEADERS)
    target_include_directories(${target} PRIVATE 3rdparty/doctest)
    target_link_libraries(${target} PRIVATE ${CMAKE_PROJECT_NAME})
    set_target_properties(${target} PROPERTIES CXX_EXTENSIONS OFF)
    if(std)
        if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
            target_compile_options(${target} PRIVATE /std:${std})
        else()
            target_compile_options(${target} PRIVATE -std=${std})
        endif()
    endif()
    add_test(NAME ${target} COMMAND ${target})
endfunction()

function(make_test target std)
    add_executable(${target} ${SOURCES})
    configure_test(${target} "${std}")
endfunction()

function(make_config_test target source std)
    add_executable(${target} ${source})
    configure_test(${target} "${std}")
endfunction()

if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    make_test(${CMAKE_PROJECT_NAME}-cpp11.t "")
else()
    make_test(${CMAKE_PROJECT_NAME}-cpp11.t c++11)
endif()

if(HAS_CPP14_FLAG)
    make_test(${CMAKE_PROJECT_NAME}-cpp14.t c++14)
endif()

if(HAS_CPP17_FLAG)
    make_test(${CMAKE_PROJECT_NAME}-cpp17.t c++17)
endif()

if(HAS_CPP20_FLAG)
    make_test(${CMAKE_PROJECT_NAME}-cpp20.t c++20)
endif()

if(HAS_CPPLATEST_FLAG)
    make_test(${CMAKE_PROJECT_NAME}-cpplatest.t c++latest)
endif()

if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    make_config_test(${CMAKE_PROJECT_NAME}-no-throw-action.t config_no_throw_action.cpp "")
    make_config_test(${CMAKE_PROJECT_NAME}-suppress-throw-action.t config_suppress_throw_action.cpp "")
else()
    make_config_test(${CMAKE_PROJECT_NAME}-no-throw-action.t config_no_throw_action.cpp c++11)
    make_config_test(${CMAKE_PROJECT_NAME}-suppress-throw-action.t config_suppress_throw_action.cpp c++11)
endif()
