include(CheckCXXCompilerFlag)

set(SOURCES test.cpp)

if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    set(OPTIONS /W4 /WX)
    check_cxx_compiler_flag(/permissive HAS_PERMISSIVE_FLAG)
    if(HAS_PERMISSIVE_FLAG)
        set(OPTIONS ${OPTIONS} /permissive-)
    endif()
    set(OPTIONS ${OPTIONS} /wd4702) # Disable warning C4702: unreachable code

    set(HAS_CPP11_FLAG TRUE)
    check_cxx_compiler_flag(/std:c++14 HAS_CPP14_FLAG)
    check_cxx_compiler_flag(/std:c++17 HAS_CPP17_FLAG)
    check_cxx_compiler_flag(/std:c++20 HAS_CPP20_FLAG)
    check_cxx_compiler_flag(/std:c++latest HAS_CPPLATEST_FLAG)
elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    set(CMAKE_VERBOSE_MAKEFILE ON)
    set(OPTIONS -Wall -Wextra -pedantic-errors -Werror)

    check_cxx_compiler_flag(-std=c++14 HAS_CPP14_FLAG)
    check_cxx_compiler_flag(-std=c++17 HAS_CPP17_FLAG)
    check_cxx_compiler_flag(-std=c++20 HAS_CPP20_FLAG)
endif()

function(configure_test target std)
    target_compile_options(${target} PRIVATE ${OPTIONS})
    target_compile_definitions(${target} PRIVATE DOCTEST_CONFIG_USE_STD_HEADERS)
    target_include_directories(${target} PRIVATE 3rdparty/doctest)
    target_link_libraries(${target} PRIVATE ${CMAKE_PROJECT_NAME})
    set_target_properties(${target} PROPERTIES CXX_EXTENSIONS OFF)
    if(std)
        if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
            target_compile_options(${target} PRIVATE /std:${std})
        else()
            target_compile_options(${target} PRIVATE -std=${std})
        endif()
    endif()
    add_test(NAME ${target} COMMAND ${target})
endfunction()

function(make_test target std)
    add_executable(${target} ${SOURCES})
    configure_test(${target} "${std}")
endfunction()

function(make_config_test target source std)
    add_executable(${target} ${source})
    configure_test(${target} "${std}")
endfunction()

function(make_compile_fail_test target source std)
    add_executable(${target} EXCLUDE_FROM_ALL ${source})
    target_compile_options(${target} PRIVATE ${OPTIONS})
    target_include_directories(${target} PRIVATE 3rdparty/doctest)
    target_link_libraries(${target} PRIVATE ${CMAKE_PROJECT_NAME})
    set_target_properties(${target} PROPERTIES CXX_EXTENSIONS OFF)
    if(std)
        if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
            target_compile_options(${target} PRIVATE /std:${std})
        else()
            target_compile_options(${target} PRIVATE -std=${std})
        endif()
    endif()
    if(CMAKE_CONFIGURATION_TYPES)
        set(build_config_args --config $<CONFIG>)
    else()
        set(build_config_args)
    endif()
    add_test(NAME ${target} COMMAND ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR} --target ${target} ${build_config_args})
    set_tests_properties(${target} PROPERTIES WILL_FAIL TRUE)
endfunction()

if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    make_test(${CMAKE_PROJECT_NAME}-cpp11.t "")
else()
    make_test(${CMAKE_PROJECT_NAME}-cpp11.t c++11)
endif()

if(HAS_CPP14_FLAG)
    make_test(${CMAKE_PROJECT_NAME}-cpp14.t c++14)
endif()

if(HAS_CPP17_FLAG)
    make_test(${CMAKE_PROJECT_NAME}-cpp17.t c++17)
endif()

if(HAS_CPP20_FLAG)
    make_test(${CMAKE_PROJECT_NAME}-cpp20.t c++20)
endif()

if(HAS_CPPLATEST_FLAG)
    make_test(${CMAKE_PROJECT_NAME}-cpplatest.t c++latest)
endif()

if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    make_config_test(${CMAKE_PROJECT_NAME}-no-throw-action.t config_no_throw_action.cpp "")
    make_config_test(${CMAKE_PROJECT_NAME}-suppress-throw-action.t config_suppress_throw_action.cpp "")
else()
    make_config_test(${CMAKE_PROJECT_NAME}-no-throw-action.t config_no_throw_action.cpp c++11)
    make_config_test(${CMAKE_PROJECT_NAME}-suppress-throw-action.t config_suppress_throw_action.cpp c++11)
endif()

if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    set(COMPILE_FAIL_STD "")
else()
    set(COMPILE_FAIL_STD c++11)
endif()

make_compile_fail_test(${CMAKE_PROJECT_NAME}-compile-fail-multiple-throw-policies.t compile_fail/multiple_throw_policies.cpp ${COMPILE_FAIL_STD})
make_compile_fail_test(${CMAKE_PROJECT_NAME}-compile-fail-no-throw-action.t compile_fail/no_throw_action.cpp ${COMPILE_FAIL_STD})
make_compile_fail_test(${CMAKE_PROJECT_NAME}-compile-fail-no-throw-constructible.t compile_fail/no_throw_constructible.cpp ${COMPILE_FAIL_STD})
make_compile_fail_test(${CMAKE_PROJECT_NAME}-compile-fail-return-non-void.t compile_fail/return_non_void.cpp ${COMPILE_FAIL_STD})
make_compile_fail_test(${CMAKE_PROJECT_NAME}-compile-fail-rvalue-only-action.t compile_fail/rvalue_only_action.cpp ${COMPILE_FAIL_STD})
make_compile_fail_test(${CMAKE_PROJECT_NAME}-compile-fail-action-with-argument.t compile_fail/action_with_argument.cpp ${COMPILE_FAIL_STD})
